--- a/latexDump/latexDump.tex
+++ b/latexDump/latexDump.tex
@@ -12,12 +12,13 @@
 	left=1.3cm,
 	right=1.3cm
 ]{geometry}
-\title{DUMP \ Differentiator. Called from main main.cpp:93}
+\title{DUMP \ Differentiator. Called from main main.cpp:109}
 \author{REASON: LaTeX DUMP 3}
 \begin{document}
+latex dump 3
 \subsection*{exp1}
 \[
-4.000000*y*12.000000+x
+4.000000(*y(*12.000000+x
 \]
 
 
