start simplification, done first vers differentiation

--- a/latexDump/latexDump.tex
+++ b/latexDump/latexDump.tex
@@ -12,13 +12,13 @@
 	left=1.3cm,
 	right=1.3cm
 ]{geometry}
-\title{DUMP \ Differentiator. Called from main main.cpp:109}
-\author{REASON: LaTeX DUMP 3}
+\title{DUMP \ Differentiator. Called from main main.cpp:128}
+\author{REASON: LaTeX DIFF DUMP 5}
 \begin{document}
-latex dump 3
+latex dump 5
 \subsection*{exp1}
 \[
-4.000000(*y(*12.000000+x
+0.000000*(12.000000+x)+4.000000*y*1.000000
 \]
 
 
