simlifying work, start doing math reader

--- a/latexDump/latexDump.tex
+++ b/latexDump/latexDump.tex
@@ -12,13 +12,13 @@
 	left=1.3cm,
 	right=1.3cm
 ]{geometry}
-\title{DUMP \ Differentiator. Called from main main.cpp:128}
-\author{REASON: LaTeX DIFF DUMP 5}
+\title{DUMP \ Differentiator. Called from main sourses/main.cpp:132}
+\author{REASON: LaTeX DIFF DUMP 3}
 \begin{document}
-latex dump 5
+latex dump 3
 \subsection*{exp1}
 \[
-0.000000*(12.000000+x)+4.000000*y*1.000000
+5.000000*(10.000000-4.000000*2.000000
 \]
 
 
